--- a/allifmaalcommonapp/templates/allifmaalcommonapp/quotes/x-qt-confrm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/quotes/x-qt-confrm.html
@@ -115,7 +115,7 @@
     <tr>
         <td>
         <div class="delete-options-container">
-          <a href="{% url 'allifmaalcommonapp:commonAddPOItems' user_var glblslug %}">Back</a>
+          <a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}">Back</a>
         </div>
         </td>
       </tr>
@@ -135,7 +135,7 @@
           <tr>
             <td>
             <div class="delete-options-container">
-              <a href="{% url 'allifmaalcommonapp:commonAddPOItems' user_var glblslug %}">No</a>
+              <a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}">No</a>
             </div>
             </td>
           </tr>
@@ -156,7 +156,7 @@
           <tr>
             <td>
             <div class="delete-options-container">
-              <a href="{% url 'allifmaalcommonapp:commonDeletePOItem' allifquery.id user_var glblslug %}" class="body-delete-link">Yes</a></li>
+              <a href="{% url 'allifmaalcommonapp:commonDeleteQuote' allifquery.id user_var glblslug %}" class="body-delete-link">Yes</a></li>
             </div>
             </td>
           </tr>
