--- a/allifmaalcommonapp/templates/allifmaalcommonapp/quotes/add-quote-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/quotes/add-quote-details.html
@@ -6,291 +6,348 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="allifmaal-main-container">
+
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Actions
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
+<div class="row mt-12" ><!--start....header row-->
 
-          <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' allifquery.id user_var glblslug %}">Edit Item</a></li>
-          <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddQuoteItems' allifquery.id user_var glblslug %}">Add Item</a></li>
-        
-          <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonQuoteToPdf' allifquery.id user_var glblslug %}">Generate pdf</a></li>
+<div class="col-md-12"><!--start....header column-->
 
-          <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteQuote' allifquery.id user_var glblslug %}">Delete Item</a></li>
+<div class="container-fluid amel-content-header">
+<div class="dropdown allifmaal-content-dropdown">
+  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+  Actions
+  </a>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <div class="content-dropdown-menu">
     
-       </div>
-      </ul>
-    </div>
-
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' allifquery.id user_var glblslug %}">Edit Item</a></li>
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddQuoteItems' allifquery.id user_var glblslug %}">Add Item</a></li>
     
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
- 
-  <a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}">Quotations</a>
-  
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-<div class="allifmaincontainer">
-  <div class="row mt-12"> <!--start....table row-->
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonQuoteToPdf' allifquery.id user_var glblslug %}">Generate pdf</a></li>
 
-  {% if myallifquery %}
+      <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteQuote' allifquery.id user_var glblslug %}">Delete Item</a></li>
+
+   </div>
+  </ul>
+</div>
+<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+
+<a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}">Quotations</a>
+
+
+</div>
+
+    </div><!--end....header column-->
+  
+  </div><!--end....header row-->
+
+</div><!--end....main headere-->
+
+  <div class="allifmaincontainer">
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">{{allifquery}} Details</div>
+  <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
-    <!--start of the table-->
-
-        <table class="table table-layout">
-        <thead>
-        <tr class="allif-table-header-row">
-        <td>Quote No.</td>
-        <td>Customer</td>
-        <td>Amount</td>
-        
-        <td>No</td>
-        <td>Yes</td>
-        
-        </tr>
-          </thead>
-          <tbody class="allif-table-body">  
-          <tr sid="allif-delete-on-table-row">
-           
-            <td id="allif-delete-on-table-row"> Delete {{myallifquery.number}} ?</td>
-            <td id="allif-delete-on-table-row">{{myallifquery.customer}}</td>
-            <td id="allif-delete-on-table-row">{{myallifquery.total|floatformat:2|intcomma}}</td>
-            <td id="allif-delete-on-table-row">
-              <a href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' allifquery.id user_var glblslug %}" class="body-delete-link">
-               Dont Delete
-               </a>
-              </td>
-            <td id="allif-delete-on-table-row">
-            <a href="{% url 'allifmaalcommonapp:commonDeleteQuote' myallifquery.id user_var glblslug %}" class="body-delete-link">
-             Yes Delete
-             </a>
-            </td>
-           
-          </tr>
-        </tbody>
-      </table>
-      </div>
-
-          {% endif %}
-        
-    <div class="table-content-description"> {{allifquery}} </div>
-    <div class="allif-details-container">
+    <div class="allif-info-tables">
       <div class="row"><!--start of row div --->
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="allif-details-card ">
-            <!--start of the table here-->
-          <table class="table allif-details-table table-layout">
-            <tbody>
-              <tr>
-                <td>Company</td>
-                <td>{{allifquery.company}}</td>
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+    
+        <tr>
+          <td class="allif-fix-table-col">Company</td>
+          <td>{{allifquery.company}}</td>
+          </tr>
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{allifquery.division}}</td>
+        </tr>
+      <tr>
+        <td class="allif-fix-table-col">Branch</td>
+        <td>{{allifquery.branch}}</td>
+        </tr>
+        <tr>
+          <td class="allif-fix-table-col">Department</td>
+          <td>{{allifquery.department}}</td>
+          </tr>
             
-                </tr>
-              <tr>
-                <td>Division</td>
-                <td>{{allifquery.division}}</td>
-            
-                </tr>
-                <tr>
-                  <td>Branch</td>
-                  <td>{{allifquery.branch}}</td>
-              
-                  </tr>
-              <tr>
-                <td>Department</td>
-                <td>{{allifquery.department}}</td>
-            
-                </tr>
           <tr>
-            <td>Customer</td>
+            <td class="allif-fix-table-col">Number</td>
+            <td>{{allifquery.number}}</td>
+            </tr>
+     
+          <tr>
+            <td class="allif-fix-table-col">Customer</td>
             <td>{{allifquery.customer}}</td>
-        
             </tr>
-           
             <tr>
-              <td>Currency</td>
+              <td class="allif-fix-table-col">Currency</td>
               <td>{{allifquery.currency}}</td>
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Likelyhood</td>
+                <td>{{allifquery.prospect}}</td>
+                </tr>
               
-            </tr>
-            <tr>
-              <td>Likelyhood</td>
-              <td>{{allifquery.prospect}}</td>
-              
-            </tr>
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+        
+                    <tr>
+                      <td class="allif-fix-table-col">Total With Discount</td>
+                      <td>{{allifquery.totalwithdiscount|floatformat:2|intcomma}}</td>
+                      </tr>
+                    
+                    <tr>
+                      <td class="allif-fix-table-col">Total With Tax</td>
+                      <td>{{allifquery.totalwithtax|floatformat:2|intcomma}}</td>
+                      </tr>
+                      <tr>
+                        <td class="allif-fix-table-col">Discount Amount</td>
+                        <td>{{allifquery.discountAmount|floatformat:2|intcomma}}</td>
+                        </tr>
+                        <tr>
+                          <td class="allif-fix-table-col">Discount Value</td>
+                          <td>{{allifquery.discountValue|floatformat:2|intcomma}}</td>
+                          </tr>
+
+                        <tr>
+                          <td class="allif-fix-table-col">Total</td>
+                          <td>{{allifquery.total|floatformat:2|intcomma}}</td>
+                          </tr>
+
+                          <tr>
+                            <td class="allif-fix-table-col">Taxes</td>
+                            <td>{{allifquery.taxAmount|floatformat:2|intcomma}}</td>
+                            </tr>
+                            <tr>
+                              <td class="allif-fix-table-col">Tax</td>
+                              <td>{{allifquery.tax|floatformat:2|intcomma}}</td>
+                              </tr>
+                             
+                                <tr>
+                                  <td class="allif-fix-table-col">Tax Amount</td>
+                                  <td>{{allifquery.taxAmount}}</td>
+                                  </tr>
+                            <tr>
+                              <td class="allif-fix-table-col">Grand Total</td>
+                              <td>{{allifquery.grandtotal|floatformat:2|intcomma}}</td>
+                              </tr>
+                        
           </tbody>
           </table>
-        
           </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+        
+<tr>
+  <td class="allif-fix-table-col">Description</td>
+  <td>{{allifquery.description}}</td>
+  </tr>
+<tr>
+  <td class="allif-fix-table-col">Created By</td>
+  <td>{{allifquery.owner}}</td>
+  </tr>
+
+          <tr>
+            <td class="allif-fix-table-col">Date</td>
+            <td>{{allifquery.date|date:'d/m/Y'}}</td>
+            </tr>
+          
             <tr>
-              <td>Amount</td>
-              <td>{{allifquery.total|intcomma}}</td>
+              <td class="allif-fix-table-col">Comments</td>
+              <td>{{allifquery.comments}}</td>
           
-              </tr>
-           
-              <tr>
-                <td>Tax</td>
-                <td>{{allifquery.tax}}</td>
-                
-              </tr>
-              <tr>
-                <td>Tax Amount</td>
-                <td>{{allifquery.taxAmount}}</td>
-                
-              </tr>
-              <tr>
-                <td>Sales Tax</td>
-                <td>{{allifquery.salestax}}</td>
-                
-              </tr>
-              <tr>
-                <td>Total with Tax</td>
-                <td>{{allifquery.totalwithtax}}</td>
-                
-              </tr>
-              <tr>
-                <td>Discount Value</td>
-                <td>{{allifquery.discountValue}}</td>
-                
-              </tr>
-              <tr>
-                <td>Discount Amount</td>
-                <td>{{allifquery.discountAmount}}</td>
-                
-              </tr>
-             
-             
-        <tr>
-          <td>Comments</td>
-          <td>{{allifquery.comments}}</td>
-          
-        </tr>
+          </tr> 
+          <tr>
+            <td class="allif-fix-table-col">Terms</td>
+            <td>{{allifquery.terms}}</td>
         
-        
-        </tbody>
-        </table>
+        </tr> 
+
+     
+      
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
       
         </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-           
-    <tr>
-    <td>Discount</td>
-    <td>{{allifquery.discount}}</td>
-
-
-    </tr>
-    <tr>
-      <td>Terms</td>
-      <td>{{allifquery.terms}}</td>
-      
-    </tr>
-     
-    <tr>
-      <td>Created By</td>
-      <td>{{allifquery.owner}}</td>
-  
-      
-      </tr> 
-        <tr>
-          <td>Created On</td>
-          <td>{{allifquery.date|date:'d/m/Y'}}</td>
-        </tr>
-      
-        </tbody>
-        </table>
-      
-      </div>
-    </div>
-      
-      </div><!--end of row div --->
-        
-          </div>
-          <hr>
 
 </div><!--end....table row-->
-
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="col-md-12"><!--start of the first row body-->
-        <div class="allif-form-container">
-        <form method='POST' action=''>{% csrf_token %}
-        <div class="row"><!--start of row div --->
-            <div class="col-md-4"><!--start of column 1-->
-              <div class="card shadow text-left p-3 allif-form-card" >
-                <label>Division Name</label> {{form.division}}
-                <label>Branch Name</label> {{form.branch}}
-                <label>Department Name</label> {{form.department}}
-                <label>Customer</label> {{form.customer}} 
-                <label>Description</label> {{form.description}} 
-                <label>Status</label>{{form.prospect}} 
-                
-                </div>
-            </div><!--end of column 1-->
-        
-            <div class="col-md-4"><!--start of column 2-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Currency</label> {{form.currency}} 
-              <label>Terms</label> {{form.terms}}
-              <label>Comments</label> {{form.comments}} 
-              <label>Discount</label> {{form.discount}} 
-              <label>Discount Rate %</label> {{form.discountValue}} 
-              
-                </div>
-            </div><!--end of column 2-->
-            <div class="col-md-4"><!--start of column 3-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Tax</label> {{form.tax}} 
-              <label>Sales Tax</label> {{form.salestax}} 
-              <label>Comments</label> {{form.comments}} 
-              <label>Discount</label> {{form.discount}} 
-              <label>Tax Rate</label> {{form.tax}}
-
-                <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-        
-                </div>
-            </div><!--end of column 1-->
-        
-        </div><!--end of row div --->
-            </form>
-            </div>
-            </div><!--end of first row body-->
-</div><!--end....table row-->
-
+</div>
 <!--end of table-->
-
 
 </div><!--end of main container of the page....-->
 
+<hr>
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add/Edit Quote Details</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{form.division}}</td>
+    
+        </tr>
+        
+        <tr>
+          <td class="allif-fix-table-col">Branch</td>
+          <td>{{form.branch}}</td>
+      
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{form.department}}</td>
+        
+            </tr>
+          <tr>
+            <td class="allif-fix-table-col">Customer</td>
+            <td>{{form.customer}}</td>
+        
+            </tr>
+          
+              <tr>
+                <td class="allif-fix-table-col">Description</td>
+                <td>{{form.description}}</td>
+            
+                </tr>
+               
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Likelyhood</td>
+            <td>{{form.prospect}}</td>
+        
+            </tr>
+           
+          <tr>
+            <td class="allif-fix-table-col">Currency</td>
+            <td>{{form.currency}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Terms</td>
+              <td>{{form.terms}}</td>
+          
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Discount</td>
+                <td>{{form.discount}}</td>
+            
+                </tr>
+              <tr>
+                <td class="allif-fix-table-col">Discount Rate %</td>
+                <td>{{form.discountValue}}</td>
+            
+                </tr>
+
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+          <tr>
+            <td class="allif-fix-table-col">Sales Tax</td>
+            <td>{{form.salestax}}</td>
+        
+            </tr>
+           
+              <tr>
+                <td class="allif-fix-table-col">Terms</td>
+                <td>{{form.terms}}</td>
+            
+                </tr>
+          
+                <tr>
+                  <td class="allif-fix-table-col">Tax Rate</td>
+                  <td>{{form.tax}}</td>
+              
+                  </tr>
+                 
+              <tr>
+                <td class="allif-fix-table-col">Comments</td>
+                <td>{{form.comments}}</td>
+            
+                </tr>
+            
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
+</form>
+<!--end of table-->
+
+</div><!--end of main container of the page....-->
+
+<hr>
+
+</div>
+</div>
   {% block scripts %}
 
   {% endblock %}
